--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <label><input type="checkbox" name="node"> Node.js Workshop — Tuesday 1pm-4pm, $100</label>          
         <label><input type="checkbox" name="build-tools"> Build tools Workshop — Wednesday 9am-12pm, $100</label>
         <label><input type="checkbox" name="npm"> npm Workshop — Wednesday 1pm-4pm, $100</label>
-                  	
+        <span id="totalActivitiesCost"></span>
       </fieldset>
       <fieldset>
         <legend>Payment Info</legend>
