Started to do form validation

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
       </fieldset>        
         
-      <button type="submit">Register</button>
+      <button class="registerButton" type="button">Register</button>
       
     </form>
 
